--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-cors = "0.6.4"
+env_logger = "0.10.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
